Header: Added position to nav to stop header menu from overlapping on scroll

--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -19,7 +19,7 @@
    .overlay {
       opacity: 0;
       position: fixed;
-      top: 3.75rem;
+      top: 0;
       right: 0;
       bottom: 0;
       left: 0;
@@ -35,6 +35,8 @@
 
 
    nav {
+      position: relative;
+      background-color: $white;
       padding-top: 1.0624rem;
       padding-bottom: 1.0624rem;
    }
