--- a/app/scss/animations.scss
+++ b/app/scss/animations.scss
@@ -23,7 +23,7 @@
    }
 }
 .fade-in {
-   animation: fade-in 300ms ease-in-out forwards;
+   animation: fade-in 200ms ease-in-out forwards;
 }
 
 
@@ -43,5 +43,5 @@
    }
 }
 .fade-out {
-   animation: fade-out 300ms ease-in-out forwards;
+   animation: fade-out 200ms ease-in-out forwards;
 }
